# local-cad-agent

./: .gitignore  README.md  config.example.yaml  install.bat  pyproject.toml  run.bat
demos/sketchup-cnc-cabinet-poc/: README.md  sample_cutlist.csv  sample_job.json
demos/sketchup-cnc-cabinet-poc/plugin/: shukry_cnc_cabinet_poc.rb
portfolio/airtable-builder-demo-2026/: README.md
