[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-cad-agent"
version = "0.1.0"
description = "Local-first CAD automation agent for geometry understanding, drawing production, and 3D handoff."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Shukry" }]
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
]
geometry = [
  "shapely>=2.0",
]
dxf = [
  "ezdxf>=1.3",
]
vision = [
  "opencv-python>=4.10",
  "pillow>=10.3",
]

[project.scripts]
local-cad-agent = "local_cad_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
